# pbt-book

./: .gitignore  README.md  book.toml  justfile
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
examples/: README.md  run.py
examples/cpp/: CMakeLists.txt  cache.hpp  lru_nonzero_test.cpp  lru_test.cpp
examples/expected-output/: cpp-nonzero.txt  cpp.txt  go-nonzero.txt  go-stateful-capped.txt  go-stateful-real.txt  go-stateful.txt  go.txt  rust-nonzero.txt  rust-stateful-capped.txt  rust-stateful-real.txt  rust-stateful.txt  rust-verbose-replay.txt  rust-verbose.txt  rust.txt  typescript-nonzero.txt  typescript.txt
examples/go/: cache.go  go.mod  go.sum  lru_test.go
examples/go/nonzero/: lru_nonzero_test.go
examples/go/stateful/: stateful_test.go
examples/go/stateful_capped/: stateful_capped_test.go
examples/go/stateful_real/: stateful_real_test.go
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
examples/rust/tests/: lru.rs  lru_nonzero.rs  lru_verbose.rs  stateful.rs  stateful_capped.rs  stateful_real.rs
examples/typescript/: package-lock.json  package.json
examples/typescript/src/: cache.ts
examples/typescript/test/: lru.test.ts  lru_nonzero.test.ts
src/: SUMMARY.md  introduction.md
src/explanation/: how-hegel-works.md  why-hegel.md
src/intro/: anatomy.md  getting-started.md  lifecycle.md  stateful.md  what-is-pbt.md
src/project/: community.md  compatibility.md
src/recipes/: data-generation.md
src/reference/: installation.md  libraries.md  protocol.md
theme/: ai-prose.css
